test/conformance/kuttl/exceptions/preconditions/03-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: resource-allowed.yaml
- file: resource-rejected.yaml
  shouldFail: true
assert:
- resource-allowed.yaml
