test/conformance/kuttl/exceptions/preconditions/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exception-conditions
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-for-labels
    context:
    - name: foo
      variable:
        value: "bar"
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "The label `app.kubernetes.io/name` is required."
      pattern:
        metadata:
          labels:
            app.kubernetes.io/name: "?*"
